added html files for visualizations

--- a/Scripts/visualizations/planets.html
+++ b/Scripts/visualizations/planets.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Escaping 2020 on Earth</title>
+  <title>Planets</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/style.css">
 
@@ -13,15 +13,16 @@
 
   <div class="jumbotron text-center">
     <h1 class="display-3">Escaping 2020 on Earth</h1>
-    <p class="lead √">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft and vehicles, we will determine the best place to relocate.
+    <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>ADD ADDITIONAL TEXT HERE</p>
+    <p>It uses utility classes for typography and
+       spacing to space content out within the larger container.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="visualizations/planets.html" role="button">Planets</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/species.html" role="button">Species</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/starships.html" role="button">Starships</a>
-      <a class="btn btn-primary btn-lg" href="visualizations/vehicles.html" role="button">Vehicles</a>
+      <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
+      <a class="btn btn-primary btn-lg" href="species.html" role="button">Species</a>
+      <a class="btn btn-primary btn-lg" href="starships.html" role="button">Starships</a>
+      <a class="btn btn-primary btn-lg" href="vehicles.html" role="button">Vehicles</a>
     </p>
   </div>
   
