updated data for hierarchy manipulation of starburst visual

--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -13,10 +13,10 @@
 
   <div class="jumbotron text-center">
     <h1 class="display-3">Escaping 2020 on Earth</h1>
-    <p class="lead √">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft and vehicles, we will determine the best place to relocate.
+    <p class="lead √ text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft and vehicles, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>ADD ADDITIONAL TEXT HERE</p>
+    <p>Jedis: Allred, Azar, Lee, and Swierczynski</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="visualizations/planets.html" role="button">Planets</a>
       <a class="btn btn-primary btn-lg" href="visualizations/species.html" role="button">Species</a>
