--- a/Scripts/visualizations/starships.html
+++ b/Scripts/visualizations/starships.html
@@ -15,12 +15,11 @@
 
 
   <div class="jumbotron text-center bg-info">
-    <h1 class="display-3">STARSHIP</h1>
+    <h1 class="display-3">STARSHIPS</h1>
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-       spacing to space content out within the larger container.</p>
+    <p>A Starship resource is a single transport craft that has hyperdrive capability.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="planets.html" role="button">Planets</a>
