adding vehicle json

--- a/Scripts/visualizations/planets.html
+++ b/Scripts/visualizations/planets.html
@@ -16,8 +16,7 @@
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-       spacing to space content out within the larger container.</p>
+    <p>A Planet resource is a large mass, planet or planetoid in the Star Wars Universe, at the time of 0 ABY.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="species.html" role="button">Species</a>
