--- a/Scripts/visualizations/species.html
+++ b/Scripts/visualizations/species.html
@@ -16,14 +16,15 @@
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-       spacing to space content out within the larger container.</p>
+    <p>A Species resource is a type of person or character within the Star Wars Universe.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="planets.html" role="button">Planets</a>
       <a class="btn btn-primary btn-lg" href="starships.html" role="button">Starships</a>
       <a class="btn btn-primary btn-lg" href="vehicles.html" role="button">Vehicles</a>
     </p>
+  </div>
+  <div class="chart">
   </div>
   
 
