--- a/Scripts/visualizations/vehicles.html
+++ b/Scripts/visualizations/vehicles.html
@@ -16,8 +16,7 @@
     <p class="lead text-left">After experiencing the whirlwind that has been the year 2020, our group has decided to search for an alternative home.  Through the examination of planets, species, and climates, as well as an analysis of spacecraft, we will determine the best place to relocate.
     </p>
     <hr class="my-2">
-    <p>It uses utility classes for typography and
-       spacing to space content out within the larger container.</p>
+    <p>A Vehicle resource is a single transport craft that does not have hyperdrive capability.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="../index.html" role="button">Home</a>
       <a class="btn btn-primary btn-lg" href="planets.html" role="button">Planets</a>
@@ -25,16 +24,20 @@
       <a class="btn btn-primary btn-lg" href="starships.html" role="button">Starships</a>
     </p>
   </div>
-  
-
-
-
+  <div class="row">
+    <div class="col-xs-12  col-md-12 col-lg-12">
+      <div id="scatter">
+        <!-- We append our chart here. -->
+      </div>
+    </div>
+  </div>
+ 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="../static/js/vehicles.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 
 </body>
